fixed horizontal (investor relation page) on mobile

--- a/src/scss/pages/investor/_horizon.scss
+++ b/src/scss/pages/investor/_horizon.scss
@@ -43,6 +43,10 @@ html {
             position: relative;
             transform: none;
             margin-bottom: 16rem;
+            padding: 8rem 12rem;
+            height: 34rem;
+            min-height: 34rem;
+            font: var(--font-body-s-mobile);
         }
     }
 
@@ -70,6 +74,10 @@ html {
             @include maxWidth($sm) {
                 flex-direction: column;
                 padding-left: 24rem;
+                align-items: start;
+                background-image: url("../img/investor/horizon-bg-mobile.png");
+                background-position: right;
+                background-repeat: no-repeat;
             }
 
             .section_pin {
@@ -77,43 +85,8 @@ html {
                 display: flex;
                 justify-content: flex-start;
                 align-items: center;
-
-                .block_wrapper {
-                    position: relative;
-                    min-width: 483rem;
-                    height: 526rem;
-                    padding-top: 50rem;
-                    &:nth-child(odd) {
-                        padding-top: 328rem;
-                    }
-
-                    img {
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                    }
-
-                    .h5 {
-                        font: var(--font-h5);
-                        margin-bottom: 12rem;
-                    }
-
-                    .p {
-                        width: 304rem;
-                        font: var(--font-body-r);
-                        color: var(--color-gray-600);
-                        span {
-                            font: var(--font-body-b);
-                        }
-                        @include maxWidth($sm) {
-                            margin-bottom: 56rem;
-                        }
-                    }
-                    &:last-child {
-                        margin-right: 15rem;
-                    }
+                @include maxWidth($sm) {
+                    flex-direction: column;
                 }
 
                 .hr {
@@ -122,6 +95,58 @@ html {
                     left: 0;
                     transform: translate(0, -50%);
                     background-color: rgba(191, 212, 228, 1);
+                }
+            }
+
+            .block_wrapper {
+                position: relative;
+                max-width: 483rem;
+                height: 526rem;
+                padding-top: 50rem;
+                @include maxWidth($sm) {
+                    width: auto;
+                    height: auto;
+                    padding: 0;
+                }
+                &:nth-child(odd) {
+                    padding-top: 328rem;
+                    @include maxWidth($sm) {
+                        padding-top: 0;
+                    }
+                }
+
+                img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
+
+                .h5 {
+                    font: var(--font-h5);
+                    margin-bottom: 12rem;
+                    @include maxWidth($sm) {
+                        font: var(--font-h5-mobile);
+                    }
+                }
+
+                p {
+                    width: 304rem;
+                    font: var(--font-body-r);
+                    color: var(--color-gray-600);
+                    span {
+                        font: var(--font-body-b);
+                    }
+                    @include maxWidth($sm) {
+                        font: var(--font-body-r-mobile);
+                        margin-bottom: 56rem;
+                        max-width: 257rem;
+                    }
+                }
+                &:last-child {
+                    font: var(--font-body-r);
+                    margin-right: 15rem;
                 }
             }
         }
